--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^0.18.0",
     "node-sass": "^4.11.0",
     "react": "^16.8.1",
+    "react-datepicker": "^2.1.0",
     "react-dom": "^16.8.1"
   }
 }
