--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "localforage": "^1.7.3",
     "node-sass": "^4.11.0",
     "react": "^16.8.1",
     "react-datepicker": "^2.1.0",
